syntax = "proto3";

package user;

option go_package = "/user";

message User {
    int64 id = 1;
    string uname = 2;
    string email = 3;
    optional string password = 4;
    string role = 5;
}

message Users {
    repeated User User = 1;
}

message Id {
    int64 id = 1;
}

message ResponseStatus {
    string status = 1;
    optional string error = 2;
}

message AddResponseStatus {
    string status = 1;
    User User = 2;
    optional string error = 3;
}

message Empty {}

service AddService {
    rpc AllUser(Empty) returns (Users);
    rpc OneUser(Id) returns (User);
    rpc AddUser(User) returns (AddResponseStatus);
    rpc UpdateUser(User) returns (ResponseStatus);
    rpc DeleteUser(Id) returns (ResponseStatus);
}